src/App.css
@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

#root {
  color: #083530;
  font-family: "DM Sans", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
}

body {
  background-color: #daeeec;
}

.main-container {
  width: 100%;
  height: 100vh;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: first baseline;
  align-items: center;
  margin-top: 4rem;
  overflow-y: scroll;
}

.content {
  width: 95%;
}

.form-header {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.main-container h1 {
  font-weight: 400;
  font-size: 1.75rem;
  line-height: 1.25rem;
  letter-spacing: 0rem;
  color: #083530;
}

.step-indicator-containter {
  display: flex;
  gap: 0.5rem;
}

.form-step-indicator {
  width: 2.13rem;
  height: 0.375rem;
  border-radius: 0.65rem;
  margin-top: 2rem;
  background-color: #abd8d3;
}

.current-form-step-indicator {
  background-color: #169486;
}

.form-container {
  width: 100%;
  margin: 0 auto;
  background-color: #ffffff;
  padding: 1.5rem 0;
  border-radius: 0.5rem;
  margin-top: 3rem;
}

.form-container h3 {
  width: 85%;
  margin: 0 auto;
  margin-bottom: 1.5rem;
  color: #0d5951;
  font-weight: 400;
  font-size: 1.15rem;
  line-height: 1.75rem;
  letter-spacing: 0rem;
}

.text-input-container {
  width: 85%;
  margin: 0 auto;
  display: flex;
  flex-flow: column nowrap;
  gap: 0.35rem;
  margin-bottom: 1.25rem;
}

.label {
  font-weight: 500;
  font-size: 0.85rem;
  line-height: 1.25rem;
}

.custom-text-input {
  min-height: 1rem;
  border: 1px solid #74bfb7;
  border-radius: 0.375rem;
  padding: 0.5rem 0.75rem;
  color: #083530;
  font-weight: 400;
  font-size: 0.85rem;
  line-height: 1.25rem;
  letter-spacing: 0%;
}

.submit-button-container {
  width: 100%;
  display: flex;
  justify-content: center;
}

.submit-button {
  width: 85%;
  margin: 0 auto;
  min-height: 1rem;
  border: none;
  border-radius: 0.375rem;
  color: #ffffff;
  background-color: #083530;
  padding: 0.5rem 0;
  margin-top: 0.25rem;
  font-weight: 400;
  font-size: 0.85rem;
  line-height: 1.5rem;
  cursor: pointer;
}

.agreement {
  width: 100%;
  margin: 0 auto;
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1.25rem;
  letter-spacing: 0rem;
  text-align: center;
  vertical-align: middle;
  margin-top: 1.5rem;
}

.terms {
  color: #169486;
  cursor: pointer;
  font-weight: 400;
  font-size: 0.75rem;
}

/* Tablet adjustment */
@media (min-width: 768px) {
  .content {
    width: 75%;
  }

  .main-container {
    justify-content: center;
    margin-top: 0rem;
    overflow-y: scroll;
  }

  .form-container {
    width: 60%;
  }

  .form-container h3 {
    width: 85%;
  }

  .text-input-container {
    width: 85%;
  }

  .agreement {
    width: 60%;
  }
}

/* Laptop or Desktop */
@media (min-width: 1024px) {
  .content {
    width: 35%;
  }

  .main-container {
    justify-content: center;
    margin-top: 0rem;
    overflow-y: scroll;
  }

  .form-container {
    width: 100%;
  }

  .form-container h3 {
    width: 85%;
  }

  .text-input-container {
    width: 85%;
  }

  .agreement {
    width: 100%;
  }
}

/* Laptop or Desktop @ 1440 */
@media (min-width: 1440px) {
  .content {
    width: 25%;
  }

  .main-container {
    justify-content: center;
    margin-top: 0rem;
    overflow-y: scroll;
  }

  .form-container {
    width: 100%;
    justify-content: "center";
  }

  .form-container h3 {
    width: 85%;
  }

  .text-input-container {
    width: 85%;
  }
}

/* 2K or 4K Desktop */
@media (min-width: 2560px) {
  * {
    font-size: 2rem;
  }

  .content {
    width: 30%;
    justify-content: "center";
    margin-top: 0rem;
    overflow-y: scroll;
  }

  .form-container {
    width: 100%;
  }

  .form-container h3 {
    width: 85%;
  }

  .text-input-container {
    width: 85%;
  }
}

